--- a/unsup3d/configs/train_synface_optimized.yml
+++ b/unsup3d/configs/train_synface_optimized.yml
@@ -17,7 +17,7 @@ crop: 170
 load_gt_depth: true
 paired_data_dir_names: ['image', 'depth']
 paired_data_filename_diff: ['image', 'depth']
-train_val_data_dir: data/synface_optimized
+train_val_data_dir: data/synface
 
 ## model
 model_name: unsup3d_synface_optimized
